--- a/MyCourse.csproj
+++ b/MyCourse.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!-- <TargetFramework>netcoreapp2.1</TargetFramework> -->
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\"/>
@@ -8,5 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SQLite" Version="2.1.0"/>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0"/>
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Server.HttpSys" Version="2.2.6"/> -->
   </ItemGroup>
 </Project>
